--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "rnode": "cd rchain && rnode-release/rnode-0.13.0-alpha3/bin/rnode run -c config.conf",
-    "deploy": "",
+    "deploy": "node deploy.js",
     "server": "node server.js"
   },
   "keywords": [],
@@ -16,7 +16,9 @@
     "@grpc/grpc-js": "^1.9.5",
     "@grpc/proto-loader": "^0.7.10",
     "@tgrospic/rnode-grpc-js": "^0.11.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "winston": "^3.10.0"
   }
