--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "sqlite3": "^5.1.6",
     "winston": "^3.10.0"
   }
 }
