--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "secp256k1": "^5.0.0",
     "sqlite3": "^5.1.6",
     "winston": "^3.10.0"
   }
